# JHU_Course_Recommender

./: .gitattributes  .gitignore  README.md  app.py  bm25_retrieval.py  course_recommender.py  embedding_retrieval.py  fetch_courses.py  main.py  pyproject.toml
course_data/: courses_20251003_131040.json  courses_20251003_140457.json  courses_20251003_142222.json  courses_20251003_142229.json  embeddings_cache.pkl  metadata.json
static/css/: style.css
static/js/: app.js
templates/: index.html
